# gps-orfeome

./: .readthedocs.yaml  LICENSE  README.md  pyproject.toml  setup.py  test_utils.py
.docker/: README.md
.docker/0.6.0/: Dockerfile
.docker/v0.5.0/: Dockerfile
.github/workflows/: main.yml  publish-to-pypi.yml
.test/config/: config.yml
config/: config.yml  stats.csv
docs/: README.md  about.rst  background.rst  citation.rst  conf.py  configuration_of_snakemake.rst  environment.yml  gps.rst  gpsw_commands.rst  index.rst  installation_of_required_software.rst  output_files_by_directory.rst  references.rst  report_issues.rst  requirements.txt  run_gpsw_with_test_data.rst  run_gpsw_with_your_own_data.rst  user_guide.rst  workflow_settings.rst  zscores.rst
docs/_static/: force-light-mode.js  info.txt
docs/_static/css/: custom.css
src/gpsw/: cli.py  utils.py
src/gpsw.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/gpsw/gpsw.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
workflow/: Snakefile
workflow/envs/: count.yaml  stats.yaml
workflow/rules/: count.smk  qc.smk  stats.smk
workflow/schemas/: config.schema.yaml
workflow/scripts/: calculate_proportion_of_reads_in_bins.py  calculate_psi.py  count_barcodes.sh  create_count_table.py  csv_to_fasta.py  general_functions.smk  lfc_plots.R  merge_gene_summary_data.py  missed_barcodes.R  plot_alignment_rate.R  plot_barcode_multi_conditions_profiles.R  plot_barcode_profiles.R  plot_barcoderank.R  plot_coverage.R  plot_dotplot.R  plot_gini_index.R  plot_lfc.R  plot_missed_barcodes.R  plot_pca.R  rename_to_barcode.py  sgrank_plot.R
