[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gpsw"
version = "v0.6.0"
authors = [
    { name="Niek Wit", email="nw416@cam.ac.uk" },
]
description="GPSW: A tool for analysing and processing Global Protein Stability Profiling data."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT License"}
classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pygithub==2.6.1", 
    "pydot==3.0.4",
 ]

[project.urls]
Repository = "https://github.com/niekwit/gps-orfeome"

[project.scripts]
gpsw = "gpsw.cli:main"

[tool.setuptools]
package-dir = {"" = "src"} 
packages = ["gpsw"] 